2011-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/qtdensity.h: Small rearrangements and
	simplifications 

2011-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/*: Added new example combining RInside with Qt
	illustrating the standard 'slider to select bandwidth for density
	estimate' example found in demo(tkdensity) and other places

2011-03-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample11.cpp: New example in
	response to r-help question by Paul Smith

2011-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample6.cpp: Updated to
	direct `R["a"] = a;' assignments

2011-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample10.cpp: New example in
	response to r-devel question by Wayne Zhang

2011-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (initialize): Assign results of Rf_install to avoid
	any risk of garbage collection -- with thanks to Doug and Luke

2010-12-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (initialize): If Rcpp is requested, load it
	explicitly before we call autoload() for all R default packages
	(with thanks to Murray Stokely for the patch)

	* Changelog: Moved up from inst/ for easier C-x 4 a use

2010-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.2.3

	* src/Makevars: Set emacs header for Makefile mode
	* src/Makevars.win: Set emacs header for Makefile mode

2010-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: New argument to constructor to select
	loading of Rcpp
	* src/RInside.cpp: Idem, also load Rcpp more quietly

2010-07-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample3.rcpp: Simpler with new Rcpp API
	* inst/examples/standard/rinside_sample4.rcpp: Idem

2010-06-16  Romain Francois <romain@r-enthusiasts.com>

	* inst/examples/standard/rinside_sample9.cpp: new example illustrating